Ensure the vertical scrollbar appears on the left rather than the right

--- a/editor/source/styles/config.sass
+++ b/editor/source/styles/config.sass
@@ -63,6 +63,8 @@ $ge-mobile-height: 731px !default
 $ge-edit-column-max-width: 500px !default
 $ge-edit-column-min-width: 250px !default
 
+$ge-edit-header-height: 38px
+
 =field-control-focus
   border: 2px solid $ge-color-primary
   border-radius: $ge-radius-2
